.github/workflows: Update README with the Binaries and legal-info location
Add the description of the location of the generated binaries, sdk,
licenses and sources.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/.github/workflows/README
+++ b/.github/workflows/README
@@ -14,3 +14,9 @@ make -C buildroot O=../output legal-info
 
 - Build the SDK
 make -C buildroot O=../output sdk
+
+You will find the #CONFIG# image and sdk here:
+buildroot/output/images
+
+You will find the #CONFIG# licenses and sources here:
+buildroot/output/legal-info
